<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Takeaway</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sendYan">发送验证码</string>
    <string name="orderFinished">已完成</string>
    <string name="orderFinishing">已派送</string>
    <string name="orderUnFinish">未派送</string>

    <string name="home">首页</string>
    <string name="order">订单</string>
    <string name="book">预订</string>
    <string name="user">我的</string>
    <string name="search_key">输入关键字</string>
    
    <string name="first_login">请先登录</string>
    <string name="no_login">请先登录</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password2">确认密码: </string>
    <string name="remeber_password">记住密码</string>
    <string name="longin">登录</string>
    <string name="register">注册</string>
    <string name="contact_number">联系号码:</string>
    <string name="input_contact_number">请输入手机号码</string>
    <string name="input_sms_code">请输入验证码</string>
    <string name="username_register">用  户  注  册</string>
    <string name="username"> 用 户 名:  </string>
    <string name="password">密       码:  </string>
    
    <string name="no_username_tips">没有帐号? 点击下面按钮，马上注册成为会员</string>
    
    <string name="refresh_data">刷新数据</string>
    <string name="refresh_data_success">数据加载成功</string>
    <string name="refresh_data_faild">数据加载失败</string>
    <string name="down_refresh">下拉刷新</string>
    <string name="data_loading">数据正在加载中...</string>
    
    
      <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉刷新</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_view">返回</string>
    <string name="activity_view_button1">点菜</string>
    <string name="title_activity_main">菜单查看</string>
    <string name="title_activity_menu">返回</string>
    <string name="title_activity_star">订餐系统</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_submit">提交订单</string>
    <string name="title_activity_order">我的订单</string>
    <string name="title_activity_book">我的预定</string>
    <string name="item_dmanager_view1">客户信息：</string>
    <string name="item_dmanager_view2">联系方式：</string>
    <string name="item_dmanager_view3">用餐人数：</string>
    <string name="item_dmanager_view4">就餐地点：</string>
    <string name="item_dmanager_view5">到店时间：</string>
    <string name="total_food_number">共点菜数：</string>
    <string name="total_price">总计金额：</string>
    <string name="item_dmanager_view8">特殊要求：</string>
    
    
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
    <string name="pre">上一步</string>
    <string name="finish">完成</string>
    
    <string name="order_number">订单号</string>
    <string name="food_pic">食物图片</string>
    <string name="food_name">食物名称</string>
    <string name="food_num">数量</string>
    <string name="order_date">订单日期</string>
    
    <string name="ordered">已点</string>
    <string name="dingcai">点菜</string>
    
    <string name="no_order">还没有订单</string>
    <string name="food_search">菜单搜索</string>
    <string name="no_search_tips">抱歉,没有此食物,搜搜其他的试试.</string>
    
    <string name="empty_data">没有数据哦(⊙o⊙)</string>
    <string name="register_success">注册成功</string>
    <string name="register_faild">注册失败(⊙o⊙)</string>
    <string name="smscode_error">验证码错误</string>
    <string name="login_faild">登录失败,用户名或密码错误</string>
    <string name="username_empty">用户名不能为空(⊙o⊙)哦</string>
    <string name="phone_empty">手机号码不能为空(⊙o⊙)哦</string>
    <string name="pwd_empty">密码不能为空(⊙o⊙)哦</string>
    <string name="load_data_faild">获取数据失败,请检查网络是否可用</string>
    <string name="dialog_loading">正在努力加载中</string>

    <string name="my_person_info_photos">我的头像</string>
    <string name="my_person_info_nickname">我的昵称</string>
    <string name="my_person_info_phone">我的号码</string>
    <string name="my_person_info_address">我的地址</string>
    <string name="my_person_info_date">我的日期</string>
    <string name="my_person_info">我的信息</string>
    <string name="exit">注销登录</string>
    <string name="save">保存</string>


    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
</resources>
