<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlDiancai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/total_food_number" />

        <TextView
            android:id="@+id/tvTotalFoodNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv1"
            android:layout_centerVertical="true"
            android:text="3" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvTotalFoodNumber"
            android:layout_marginLeft="5dp"
            android:text="@string/total_price" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView1"
            android:text="$0" />

        <Button
            android:id="@+id/btnDingDan"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/buttonstylered"
            android:text="@string/title_activity_submit" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tvOrderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/order_number" />

        <TextView
            android:id="@+id/tvFoodPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/tvOrderNumber"
            android:text="@string/food_pic" />

        <TextView
            android:id="@+id/tvFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvFoodPicture"
            android:text="@string/food_name" />

        <TextView
            android:id="@+id/tvFoodNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/tvDate"
            android:text="@string/food_num" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/order_date" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>
	<TextView
	     android:id="@+id/tvNoOrderTips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_order"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="gone"
	    />
</LinearLayout>