<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/login_bg" >

    <include
        android:id="@+id/header"
        layout="@layout/common_blue_header_new" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editview_height"
            android:layout_marginTop="15dip"
            android:background="@drawable/login_input"
            android:hint="@string/input_username"
            android:inputType="text"
            android:textColor="@color/c333"
            android:paddingLeft="5dp" >
        </EditText>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editview_height"
            android:layout_below="@+id/et_username"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_input"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textColor="@color/c333"
            android:maxLength="11"
            android:paddingLeft="5dp" >
        </EditText>

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:checked="true"
            android:text="@string/remeber_password"
            android:visibility="gone"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="#716b60" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cb_remember"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bottombar"
            android:gravity="center"
            android:text="@string/longin" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:text="@string/no_username_tips" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@id/tv_register"
            android:background="@drawable/btn_bottombar"
            android:text="@string/register" />
    </RelativeLayout>

</RelativeLayout>